[gd_scene load_steps=8 format=2]

[ext_resource path="res://level-select.gd" type="Script" id=1]
[ext_resource path="res://fonturi/fundal1.jpg" type="Texture" id=2]
[ext_resource path="res://fonturi/Acme-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://texturi/Button-SoundBible.com-1420500901.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 200
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 250
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 150
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="levelselect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="fundal1" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 2 )

[node name="levels" type="Label" parent="."]
margin_left = 505.035
margin_top = 11.7401
margin_right = 1466.04
margin_bottom = 328.74
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.898039, 0.701961, 0.0392157, 1 )
text = "Levels Menu"

[node name="1" type="Button" parent="."]
margin_left = 60.404
margin_top = 378.5
margin_right = 169.404
margin_bottom = 701.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.937255, 0.937255, 1 )
action_mode = 0
text = "1"
flat = true

[node name="2" type="Button" parent="."]
margin_left = 313.505
margin_top = 378.5
margin_right = 452.505
margin_bottom = 701.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.937255, 0.937255, 1 )
action_mode = 0
text = "2"
flat = true

[node name="3" type="Button" parent="."]
margin_left = 602.043
margin_top = 378.5
margin_right = 736.043
margin_bottom = 701.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.937255, 0.937255, 1 )
action_mode = 0
text = "3"
flat = true

[node name="4" type="Button" parent="."]
margin_left = 888.921
margin_top = 378.5
margin_right = 1034.92
margin_bottom = 701.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.937255, 0.937255, 1 )
action_mode = 0
text = "4"
flat = true

[node name="5" type="Button" parent="."]
margin_left = 1164.32
margin_top = 378.5
margin_right = 1298.32
margin_bottom = 701.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.937255, 0.937255, 1 )
action_mode = 0
text = "5"
flat = true

[node name="6" type="Button" parent="."]
margin_left = 1426.72
margin_top = 378.5
margin_right = 1563.72
margin_bottom = 701.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.937255, 0.937255, 1 )
action_mode = 0
text = "6"
flat = true

[node name="7" type="Button" parent="."]
margin_left = 1708.8
margin_top = 378.5
margin_right = 1831.8
margin_bottom = 701.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.937255, 0.937255, 1 )
action_mode = 0
text = "7"
flat = true

[node name="sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0

[node name="Meniu" type="Button" parent="."]
margin_left = 1461.02
margin_top = 822.066
margin_right = 1918.02
margin_bottom = 1082.07
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.898039, 0.701961, 0.0392157, 1 )
action_mode = 0
text = "Menu"
flat = true
[connection signal="pressed" from="1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="7" to="." method="_on_7_pressed"]
[connection signal="finished" from="sound" to="." method="_on_sound_finished"]
[connection signal="pressed" from="Meniu" to="." method="_on_Button_pressed"]
